--- a/src/app/markdown/markdown.component.html
+++ b/src/app/markdown/markdown.component.html
@@ -1,18 +1,19 @@
 <nav class="navbar">
   <button>
-    <img src="src\assets\icon-menu.svg" alt="Menu">
+    <img src="public\assets\icon-menu.svg" alt="Menu" id="menu">
   </button>
-  <img src="src\assets\logo.svg" alt="Logo">
+  <img src="public\assets\logo.svg" alt="Logo" id="logo">
   <div class="document-name">
-    <img src="src\assets\icon-document.svg" alt="Document-name">
+    <img src="public\assets\icon-document.svg" alt="Document-name">
     Welcome.md
   </div>
   <button class="delete">
-    <img src="src\assets\icon-delete.svg" alt="delete">
+    <img src="public\assets\icon-delete.svg" alt="delete" id="delete">
   </button>
   <button class="Save-Changes">
-    <img src="src\assets\icon-save.svg" alt="save">
+    <img src="public\assets\icon-save.svg" alt="save">
     Save Changes
   </button>
 
 </nav>
+
