--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <base href="/">
-  <link rel="icon" type="image/png" sizes="32x32" href="src\assets\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public\assets\favicon-32x32.png">
   <title>In-browser markdown editor</title>
 </head>
 <body>
